--- a/package.json
+++ b/package.json
@@ -1,18 +1,48 @@
 {
   "name": "sharebag",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
+  "dependencies": {
+    "@material-ui/core": "^4.11.4",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.58",
+    "axios": "^0.21.1",
+    "formik": "^1.5.8",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "4.0.3",
+    "react-text-mask": "^5.4.3",
+    "typescript": "4.2.4"
+  },
   "scripts": {
-    "start": "concurrently -k \"yarn start-server\" \"yarn start-client\"",
-    "start-server": "cd server && yarn start",
-    "start-client": "cd client && yarn start"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   },
   "devDependencies": {
-    "concurrently": "^4.1.1"
-  },
-  "dependencies": {
-    "@material-ui/core": "^4.2.1",
-    "@types/react-router-dom": "^4.3.4",
-    "react-router-dom": "^5.0.1"
+    "@types/node": "12.6.8",
+    "@types/react": "17.0.5",
+    "@types/react-dom": "17.0.5",
+    "@types/react-router": "^5.1.14",
+    "@types/react-router-dom": "^5.1.7",
+    "@types/react-text-mask": "^5.4.6"
   }
 }
